Afternoon exercise complete. Core and Extension
