# src/main/java/com/booleanuk/api/Model/Book.java
@@ -1,0 +1,90 @@
+package com.booleanuk.api.Model;
+
+
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import com.fasterxml.jackson.annotation.JsonIncludeProperties;
+import jakarta.persistence.*;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@NoArgsConstructor
+@Entity
+@Table(name = "books")
+public class Book {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private int id;
+
+    @Column
+    private String title;
+
+    @Column
+    private String genre;
+
+    @ManyToOne
+    @JoinColumn(name = "author_id", nullable = false)
+    @JsonIncludeProperties(value = {"id", "firstName", "lastName"})
+    private Author author;
+
+    @ManyToOne
+    @JoinColumn(name= "publisher_id", nullable = false)
+    @JsonIncludeProperties(value = {"id", "name", "location"})
+    private Publisher publisher;
+
+
+    public Book(String title, String genre) {
+        this.title = title;
+        this.genre = genre;
+    }
+
+    public Book(String title, String genre, Author author, Publisher publisher) {
+        this.title = title;
+        this.genre = genre;
+        this.author = author;
+        this.publisher = publisher;
+    }
+
+    public int getId() {
+        return id;
+    }
+
+    public void setId(int id) {
+        this.id = id;
+    }
+
+    public String getTitle() {
+        return title;
+    }
+
+    public void setTitle(String title) {
+        this.title = title;
+    }
+
+    public String getGenre() {
+        return genre;
+    }
+
+    public void setGenre(String genre) {
+        this.genre = genre;
+    }
+
+    public Author getAuthor() {
+        return author;
+    }
+
+    public void setAuthor(Author author) {
+        this.author = author;
+    }
+
+    public Publisher getPublisher() {
+        return publisher;
+    }
+
+    public void setPublisher(Publisher publisher) {
+        this.publisher = publisher;
+    }
+
+}
+
+
